# lectern

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  E2E.md  NOTICE  QUICKSTART.md  README.md  RELEASING.md  SECURITY.md  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  cross-platform.yml  windows-pr.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  Brain.tsx  BrandIcons.tsx  CodeEditor.tsx  Connect.tsx  Marketplace.tsx  Onboarding.tsx  RiveScene.tsx  Schedule.tsx  Settings.tsx  TerminalDrawer.tsx  Usage.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/tui/: package.json  tsconfig.json
apps/tui/src/: daemon.ts  index.tsx
bench/: .gitignore  Dockerfile  METHODOLOGY.md  README.md  runner.py
bench/studies/2026-07-06-free-models/: RESULTS.md
bench/studies/2026-07-06-free-models/single-vs-conductor/: cross-file-slug__conductor__r0.metrics.json  cross-file-slug__conductor__r1.metrics.json  cross-file-slug__single__r0.metrics.json  cross-file-slug__single__r1.metrics.json  dedup-list__conductor__r0.metrics.json  dedup-list__conductor__r1.metrics.json  dedup-list__single__r0.metrics.json  dedup-list__single__r1.metrics.json  fix-off-by-one__conductor__r0.metrics.json  fix-off-by-one__conductor__r1.metrics.json  fix-off-by-one__single__r0.metrics.json  fix-off-by-one__single__r1.metrics.json  fizzbuzz__conductor__r0.metrics.json  fizzbuzz__conductor__r1.metrics.json  fizzbuzz__single__r0.metrics.json  fizzbuzz__single__r1.metrics.json  json-config__conductor__r0.metrics.json  json-config__conductor__r1.metrics.json  json-config__single__r0.metrics.json  json-config__single__r1.metrics.json  refactor-counter__conductor__r0.metrics.json  refactor-counter__conductor__r1.metrics.json  refactor-counter__single__r0.metrics.json  refactor-counter__single__r1.metrics.json  rows.jsonl  stack-class__conductor__r0.metrics.json  stack-class__conductor__r1.metrics.json  stack-class__single__r0.metrics.json  stack-class__single__r1.metrics.json  summary.json  summary.md  temp-convert__conductor__r0.metrics.json  temp-convert__conductor__r1.metrics.json  temp-convert__single__r0.metrics.json  temp-convert__single__r1.metrics.json
bench/studies/2026-07-06-hard-tasks/: RESULTS.md
bench/studies/2026-07-06-hard-tasks/conductor-auto/: hard-api-shim__conductor__r0.metrics.json  hard-csv-report__conductor__r0.metrics.json  hard-fix-tests__conductor__r0.metrics.json  hard-migration__conductor__r0.metrics.json  hard-pipeline__conductor__r0.metrics.json  hard-wordwrap__conductor__r0.metrics.json  rows.jsonl  summary.json  summary.md
bench/studies/2026-07-06-hard-tasks/free/: hard-api-shim__conductor__r0.metrics.json  hard-api-shim__conductor__r1.metrics.json  hard-api-shim__single__r0.metrics.json  (+23 more)
bench/studies/2026-07-11-scaffolding-delta/: RESULTS.md
bench/studies/2026-07-12-brain-isolation/: RESULTS.md
bench/tasks-convention/: README.md
bench/tasks-convention/error-catalog/: skill.json  task.json
bench/tasks-convention/validate-result/: skill.json  task.json
bench/tasks/cross-file-slug/: task.json
bench/tasks/dedup-list/: task.json
bench/tasks/fix-off-by-one/: task.json
bench/tasks/fizzbuzz/: task.json
bench/tasks/hard-api-shim/: task.json
bench/tasks/hard-csv-report/: task.json
bench/tasks/hard-fix-tests/: task.json
bench/tasks/hard-migration/: task.json
bench/tasks/hard-pipeline/: task.json
bench/tasks/hard-wordwrap/: task.json
bench/tasks/json-config/: task.json
bench/tasks/refactor-counter/: task.json
bench/tasks/stack-class/: task.json
bench/tasks/temp-convert/: task.json
crates/engine/: Cargo.toml
crates/engine/src/: a2a.rs  audit.rs  backend.rs  checkpoint.rs  cloud.rs  codegraph.rs  diag.rs  embed.rs  event.rs  harness_mcp.rs  lib.rs  mcp.rs  orchestrator.rs  registry.rs  route.rs  sandbox.rs  securebundle.rs  skillstats.rs  store.rs
crates/lectern/: Cargo.toml
crates/lectern/src/: main.rs
crates/lecternd/: Cargo.toml
crates/lecternd/src/: main.rs
docs/: a2a-design.md  mid-turn-steering-design.md  run-sandbox-design.md  winmac-autoupdate-plan.md
docs/tui/: README.md
docs/tui/captures/: 01-boot.txt  02-run-anatomy.txt  03-help.txt  04-sessions-filter.txt  05-models.txt  06-theme.txt  07-diff-overlay.txt  08-clean.txt  09-pin.txt  10-usage.txt  11-mcp.txt  12-leader-hint.txt  13-rename.txt  14-pin.txt  15-export.txt  16-mode-apply.txt  17-dialog-rename-mode.txt
scripts/: changelog-section.py  daemon-smoke.py  make-latest-json.sh  portability-lint.sh  tui-drive.sh
(+43 files in other folders)
