[package]
name = "lecternd"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
publish = false
description = "Lectern engine daemon — long-lived host for the engine, exposed over a local socket."

[[bin]]
name = "lecternd"
path = "src/main.rs"

[dependencies]
lectern-engine = { path = "../engine" }
anyhow = "1"
serde_json = "1"
# Small synchronous HTTP/1.1 server for the opt-in, loopback-only A2A endpoint
# (no async runtime — fits the daemon's threaded model). See docs/a2a-design.md.
tiny_http = { version = "0.12", default-features = false }
